apps/base/redirects/nas3/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: nas3
  namespace: redirects
subsets:
  - addresses:
      - ip: 10.0.7.2
    ports:
      - port: 9000
        protocol: TCP
