apps/base/redirects/nas3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nas3
  namespace: redirects
spec:
  internalTrafficPolicy: Cluster
  ports:
    - port: 9000
      protocol: TCP
      targetPort: 9000
  sessionAffinity: None
  type: ClusterIP
