apps/base/redirects/nas3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: nas3
  namespace: redirects
spec:
  ingressClassName: nginx-public
  rules:
    - host: nas3.christensencloud.us
      http:
        paths:
          - backend:
              service:
                name: nas3
                port:
                  number: 9000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - nas3.christensencloud.us
      secretName: nas3-christensencloud.us-tls
